--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -3,4 +3,11 @@ spring:
     name: api-gateway
 
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-server:8888
+  profiles:
+    active: docker
+  cloud:
+    config:
+      uri: http://config-server:8888
+server:
+  port: 8080
