--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   application:
     name: auth-service
-
+  profiles:
+    active: docker
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-server:8888
 
 server:
   port: 8081
