--- a/config-repo/api-gateway-docker.yml
+++ b/config-repo/api-gateway-docker.yml
@@ -1,3 +1,4 @@
+---
 server:
   port: 8080
 
@@ -12,10 +13,10 @@ spring:
     gateway:
       routes:
         - id: auth-service
-          uri: http://localhost:8081
+          uri: http://auth-service:8081
           predicates:
             - Path=/api/auth/**
         - id: user-service
-          uri: http://localhost:8082
+          uri: http://user-service:8082
           predicates:
             - Path=/api/users/**
