--- a/config-repo/auth-service-docker.yml
+++ b/config-repo/auth-service-docker.yml
@@ -1,30 +1,20 @@
 spring:
-  config:
-    activate:
-      on-profile: default
-
-  application:
-    name: auth-service
-
   datasource:
-    url: jdbc:mysql://localhost:3308/auth_db
+    url: jdbc:mysql://mysql:3306/auth_db
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
-
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
-
-server:
-  port: 8081
-
 jwt:
   secret: my_super_secret_key_that_is_long_enough_and_secure
+  expiration: 86400000
+server:
+  port: 8081
