--- a/config-repo/api-gateway-docker.yml
+++ b/config-repo/api-gateway-docker.yml
@@ -1,4 +1,3 @@
----
 server:
   port: 8080
 
@@ -17,6 +16,10 @@ spring:
           predicates:
             - Path=/api/auth/**
         - id: user-service
-          uri: http://user-service:8082
+          uri: http://user-service:8085
           predicates:
             - Path=/api/users/**
+        - id: product-service
+          uri: http://product-service:8082
+          predicates:
+            - Path=/api/products/**
