--- a/config-repo/product-service-docker.yml
+++ b/config-repo/product-service-docker.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3308/product_db
+    url: jdbc:mysql://mysql:3306/product_db
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
