--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,26 +12,14 @@ services:
       - "3308:3306"
     volumes:
       - mysql_auth_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p123456"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
     networks:
       - backend
 
   redis:
     image: redis:7.2
     container_name: redis-container
-    command: redis-server
     ports:
       - "6379:6379"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 20
     networks:
       - backend
 
@@ -42,73 +30,17 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - C:/Users/buck/Napplee/Clone/config-repo:/config-repo
+      - ./config-repo:/config-repo
     environment:
       - SPRING_PROFILES_ACTIVE=native
       - SPRING_CLOUD_CONFIG_SERVER_NATIVE_SEARCH-LOCATIONS=file:/config-repo
+    networks:
+      - backend
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:8888/actuator/health"]
       interval: 5s
       timeout: 3s
       retries: 20
-    networks:
-      - backend
-
-  auth-service:
-    build:
-      context: ./auth-service
-    container_name: auth-service
-    depends_on:
-      config-server:
-        condition: service_healthy
-      mysql:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    ports:
-      - "8081:8081"
-    environment:
-      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
-      - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
-    networks:
-      - backend
-
-  product-service:
-    build:
-      context: ./product-service
-    container_name: product-service
-    depends_on:
-      config-server:
-        condition: service_healthy
-      mysql:
-        condition: service_healthy
-    ports:
-      - "8082:8082"
-    environment:
-      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
-      - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
-    networks:
-      - backend
-
-  api-gateway:
-    build:
-      context: ./api-gateway
-    container_name: api-gateway
-    depends_on:
-      config-server:
-        condition: service_healthy
-      auth-service:
-        condition: service_started
-    ports:
-      - "8080:8080"
-    environment:
-      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
-      - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_CLOUD_CONFIG_URI=http://config-server:8888
-    networks:
-      - backend
 
 volumes:
   mysql_auth_data:
@@ -116,3 +48,4 @@ volumes:
 networks:
   backend:
     driver: bridge
+    name: backend
