--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -4,10 +4,20 @@ spring:
 
   config:
     import: optional:configserver:http://config-server:8888
+
   profiles:
     active: docker
+
   cloud:
     config:
       uri: http://config-server:8888
+
 server:
   port: 8080
+
+logging:
+  level:
+    root: INFO
+    org.springframework.cloud.gateway: DEBUG
+    org.springframework.web.server.adapter.HttpWebHandlerAdapter: DEBUG
+    reactor.netty.http.client: DEBUG
